--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,19 @@
 body {
-  color: blue;
-  text-align: center;
-  font-size: 16px;
-  font-family: 'Arial';
-  margin: 0;
-  padding: 0.;
+    background: #1e1f24;
+    color: #333;
+    text-align: center;
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
 
 #container{
-  width: 70%;
-  padding: 1em;
-  text-align: left;
-  border: 1px solid #dddd;
-  margin: 0 auto;
+   width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
 
 #container h1{
@@ -20,16 +21,23 @@ body {
 }
 
 #cabecera{
-  background: #44D;
-  box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.75);
-  color: white;
-  font-weight: bold;
-  margin: 0;
-  padding: 0.5em;
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #post{
-  padding: 1em;
+  background: white;
+    padding: 1em;
 }
 
 #cabecera #tagline{
